# ls-ml-backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  shell.nix
src/: api.rs  config.rs  main.rs  state.rs
src/services/: health_service.rs  mod.rs  predict_service.rs  setup_service.rs
