[package]
name = "ml-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenvy = "0.15.7"
envy = "0.4.2"
futures = { version = "=0.3.17", default-features = false, features = ["async-await", "std"] }
image = "0.24.9"
ndarray = "0.15"
ort = { version = "=2.0.0-rc.0", features = ["load-dynamic"] }
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
